--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Location Reminders</string>
-    <string name="error_happened">Error happened</string>
     <string name="retry">Retry</string>
     <string name="no_data">No Data</string>
     <string name="reminder_title">Reminder Title</string>
@@ -32,22 +31,24 @@
     <string name="no_location_selected">No location selected</string>
     <string name="geofences_not_added">Problem in adding geofences.</string>
     <string name="welcome">Welcome</string>
-    <string name="err_enter_title">Please enter title</string>
-    <string name="err_select_location">Please select location</string>
-    <string name="err_invalid_radius">Invalid radius. Please try selecting the reminder location again</string>
     <string name="geofence_radius_description">Your geofence radius has %s meters</string>
     <string name="geofence_location_description">Within %sm from %s</string>
     <string name="reminder_location_description">Centered at coordinates: %1$.5f, %2$.5f</string>
-    <string name="unknown_location">Unknown Location (coordinates: %1$.5f, %2$.5d)</string>
+    <string name="unknown_location">Unknown Location (coordinates: %1$.5f, %2$.5f)</string>
+    <string name="tos">By continuing you are indicating that you accept our Terms of Service and Privacy Policy</string>
+    <string name="illustrative_treasure_hunt_map">Illustrative treasure hunt map</string>
+    <string name="sign_in">Sign-in</string>
+    <string name="sign_in_with_google">Sign-in with Google</string>
 
     <!-- Error strings -->
+    <string name="error_happened">Error happened</string>
+    <string name="err_not_possible_to_save">It was not possible to save your reminder. Verify the required conditions such as permissions and try again.</string>
     <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
     <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
     <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
     <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
     <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
-    <string name="tos">By continuing you are indicating that you accept our Terms of Service and Privacy Policy</string>
-    <string name="illustrative_treasure_hunt_map">Illustrative treasure hunt map</string>
-    <string name="sign_in">Sign-in</string>
-    <string name="sign_in_with_google">Sign-in with Google</string>
+    <string name="err_enter_title">Please enter title</string>
+    <string name="err_select_location">Please select location</string>
+    <string name="err_invalid_radius">Invalid radius. Please try selecting the reminder location again</string>
 </resources>
